--- a/index.html
+++ b/index.html
@@ -1,7 +1,163 @@
+<!doctype html>
 <html>
- <head> 
-  </head>
- <body>
-   <h1>¡Hola! Este es mi repositorio web.</h1>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>Index</title>
+	<style type="text/css">
+		h1 {
+			font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+		}
+		*{
+			margin:0px;
+			padding:0px;
+		}
+		header,nav,main,footer{
+			width:1280px;
+			margin:0px auto;
+		}
+		header{
+			height:200px;
+		}
+		nav{
+			height:auto;
+			background-color: #3C4FE4;
+		}
+		main{
+			background-color: #666CAC;	
+			height:1450px;
+		}
+		footer{
+			height:100px;
+		}
+		header,footer{
+			background-color: #5E90BF;
+			color:aliceblue;
+		}
+		h1,h6{
+			width:640px;
+			margin: 0px auto; 
+			text-align: center;
+		}
+		h1{
+			padding:85px 0px;
+		}
+		h1,h2,h6{
+		height:30px;
+		}
+		h6{
+			padding:35px 0px;
+		}
+		/*section{
+			width:860px;
+			height:300px;
+			background-color:tomato;
+			margin:10px auto;
+			padding:20px;*/
+		}
+		sectionh2{
+			color:deepskyblue;
+		}
+	</style>
+	<link href="css/style_pageimage.css" rel="stylesheet" type="text/css">
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/carter-one:n4:default.js" type="text/javascript"></script>
+</head>
+	
+<body>
+	<header>
+		<h1>INICIO&nbsp;</h1>
+	</header>
+	<nav>
+		 <ul>
+	<li><a href="index.html">Inicio</a></li>		 
+    <li><a href="html/estilos_texto.html">Estilos de texto</a></li>
+    <li><a href="html/Tablas.html">Tablas</a></li>
+    <li><a href="html/listas.html">Listas</a></li>
+    <li><a href="html/imagenes.html">Imágenes</a></li>
+    <li><a href="html/video.html">Video</a></li>
+    <li><a href="html/audio.html">Audio</a></li>
+	<li><a href="html/formularios.html">Formulario</a></li>
+	<li><a href="html/fuentes.html">Fuentes y animación</a></li>
+	</ul>
+		<!--Comentario 1:Agregar código de menú de navegación-->
+	</nav>
+<main>
+	<h1 style="color:white;padding:0px;">Contenido de la pagina</h1>
+		<section>
+		<h2>ESTILOS DE TEXTO&nbsp;</h2>
+			<p>Lorem ipsum <b>dolor sit amet, consectetur</b> adipisicing elit. Voluptates impedit quod placeat soluta nemo cupiditate quasi ea error quas at.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <mark>Nulla, alias similique excepturi facere maiores,</mark> deleniti, ea iusto pariatur placeat, tempora quod magni possimus sequi! Minus fugit incidunt ea corporis rem.</p>
+			<ul>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum dolor.</li>
+				<li>Lorem ipsum dolor.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur.</li>
+			</ul>
+		</section>
+  <section>
+			<h2>TABLAS</h2>
+			<p>Lorem ipsum<i> dolor sit amet, consectetur adipisicing elit.</i> Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+			<ol>
+	  <li>Lorem ipsum dolor.</li>
+	   <li>Lorem ipsum dolor.</li>
+	   <li>Lorem ipsum dolor.</li>
+	   <li>Lorem ipsum dolor.</li>
+	   <li>Lorem ipsum dolor.</li>
+	  </ol>
+		</section>
+		<section>
+		  <h2>LISTAS&nbsp;</h2>
+		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+		 <ol>
+			<li>Lorem ipsum dolor sit amet, consectetur.</li>
+			 <li>Lorem ipsum dolor sit.</li>
+			 <li>Lorem ipsum dolor sit amet.</li>
+			 <ul>
+			 <li>Lorem ipsum dolor sit.</li>
+			 <li>Lorem ipsum dolor sit.</li>
+			 <li>Lorem ipsum dolor sit.</li>
+			 </ul>
+			</ol>
+	</section>
+<section>
+    <h2>IMAGENES&nbsp;</h2>
+		<p>Lorem ipsum <del>dolor sit amet,</del> consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ab tempora molestias officiis! Eveniet illum quod nesciunt, eligendi deleniti praesentium?</p>
+			<p>Lorem ipsum dolor sit amet,h<sup>2</sup>=c<sup>2</sup>+c<sup>2</sup>consectetur adipisicing elit. Ducimus, veritatis.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. H<sub>2</sub>OCorporis odit nulla reprehenderit vel a odio aliquam. Explicabo dolor ipsa quo.</p>
+		</section>
+  <section>
+			  <h2>VIDEO&nbsp;</h2>
+			  <p>Lorem ipsum <del>dolor sit amet,</del> consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ab tempora molestias officiis! Eveniet illum quod nesciunt, eligendi deleniti praesentium?</p>
+			  <p>Lorem ipsum dolor sit amet,h<sup>2</sup>=c<sup>2</sup>+c<sup>2</sup>consectetur adipisicing elit. Ducimus, veritatis.</p>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. H<sub>2</sub>OCorporis odit nulla reprehenderit vel a odio aliquam. Explicabo dolor ipsa quo.</p>
+  </section>
+  <section>
+			  <h2>AUDIO&nbsp;</h2>
+			  <p>Lorem ipsum <del>dolor sit amet,</del> consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ab tempora molestias officiis! Eveniet illum quod nesciunt, eligendi deleniti praesentium?</p>
+			  <p>Lorem ipsum dolor sit amet,h<sup>2</sup>=c<sup>2</sup>+c<sup>2</sup>consectetur adipisicing elit. Ducimus, veritatis.</p>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. H<sub>2</sub>OCorporis odit nulla reprehenderit vel a odio aliquam. Explicabo dolor ipsa quo.</p>
+  </section>
+  <section>
+    <h2>FORMULARIO&nbsp;</h2>
+    <p>Lorem ipsum <del>dolor sit amet,</del> consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ab tempora molestias officiis! Eveniet illum quod nesciunt, eligendi deleniti praesentium?</p>
+    <p>Lorem ipsum dolor sit amet,h<sup>2</sup>=c<sup>2</sup>+c<sup>2</sup>consectetur adipisicing elit. Ducimus, veritatis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. H<sub>2</sub>OCorporis odit nulla reprehenderit vel a odio aliquam. Explicabo dolor ipsa quo.</p>
+  </section>
+  <section>
+    <h2>FUENTES Y ANIMACIÓN</h2>
+    <p>Lorem ipsum <del>dolor sit amet,</del> consectetur adipisicing elit. Sit quis accusamus repudiandae, est alias! Non perspiciatis odio facilis assumenda voluptate, iure esse distinctio omnis rerum nulla, vitae nihil, suscipit debitis neque repellendus inventore. Sint vitae, consequuntur tempora nostrum amet fugit deleniti consectetur dolorum excepturi minus, nulla aut eum voluptatibus impedit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ab tempora molestias officiis! Eveniet illum quod nesciunt, eligendi deleniti praesentium?</p>
+    <p>Lorem ipsum dolor sit amet,h<sup>2</sup>=c<sup>2</sup>+c<sup>2</sup>consectetur adipisicing elit. Ducimus, veritatis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. H<sub>2</sub>OCorporis odit nulla reprehenderit vel a odio aliquam. Explicabo dolor ipsa quo.</p>
+  </section>
+  </main>
+	<footer>
+<h6><strong>Elaborado por <a href="html/acerca de mi.html">Jessica Rodríguez Toriz</a></strong></h6>
+</footer>
+</body>
 </html>
